add json for index and change controller adn service